# ray-space

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
src/: main.cpp
src/core/: color.hpp  image.cpp  image.hpp  ray.cpp  ray.hpp  texture.cpp  texture.hpp  utils.hpp  vec3.cpp  vec3.hpp
src/shapes/: hittable.hpp  hittableWorld.cpp  hittableWorld.hpp  material.cpp  material.hpp  sphere.cpp  sphere.hpp
src/ui/: renderer.cpp  renderer.hpp  ui.cpp  ui.hpp
src/ui/plot/: plotViewTab.cpp  plotViewTab.hpp  plotWindow.cpp  plotWindow.hpp
src/ui/render/: renderWindow.cpp  renderWindow.hpp
src/ui/settings/: cameraSettingsWindow.cpp  cameraSettingsWindow.hpp  exportSettingsWindow.cpp  exportSettingsWindow.hpp  planetSettingsWindow.cpp  planetSettingsWindow.hpp  worldSettingsWindow.cpp  worldSettingsWindow.hpp
src/world/: camera.cpp  camera.hpp  hittableWorld.cpp  hittableWorld.hpp  visibleWorld.cpp  visibleWorld.hpp
